--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -35,8 +35,8 @@ jobs:
     - run: julia -e '
             using Pkg; Pkg.activate("."); Pkg.instantiate();
             using NodeJS; run(`$(npm_cmd()) install highlight.js`);
-            using Franklin;
-            optimize()'
+            using Franklin'
+    # removed ;optimize()
     - name: Build and Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
