Updated the github action

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -2,8 +2,7 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - main
-      - master
+      - dev
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -30,5 +29,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
+        BRANCH: master
         FOLDER: __site
