Added an article.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.example.com"
+baseURL = "https://we-gold.github.io"
 languageCode = "en-us"
 title = "Weaver Goldman"
 theme = "digital-garden"
@@ -7,9 +7,9 @@ copyright = "Weaver Goldman ©"
 
 [params]
   name = "Weaver Goldman"
-  description = "Programmer and Learning Enthusiast"
+  description = "Programmer, Learning Enthusiast, and Biology Novice"
   initials = "WG"
-  googleAnalytics = ""
+  # googleAnalytics = ""
 
   [[params.social]]
     name = "Github"
@@ -23,22 +23,22 @@ copyright = "Weaver Goldman ©"
 
 
 [menu]
-#   [[menu.main]]
-#     name = "Digital Garden"
-#     url = "/garden/"
-#     weight = 1
-#   [[menu.main]]
-#     name = "Projects"
-#     url = "/projects/"
-#     weight = 2
+  [[menu.main]]
+    name = "Digital Garden"
+    url = "/garden/"
+    weight = 1
+  [[menu.main]]
+    name = "Projects"
+    url = "/projects/"
+    weight = 2
 #   [[menu.main]]
 #     name = "Library"
 #     url = "/library/"
 #     weight = 3
-#   [[menu.main]]
-#     name = "About"
-#     url = "/about/"
-#     weight = 4
+  [[menu.main]]
+    name = "About"
+    url = "/about/"
+    weight = 4
 
 
 [taxonomies]
