--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/digital-garden"]
 	path = themes/digital-garden
-	url = https://github.com/paulmartins/hugo-digital-garden-theme.git
+	url = https://github.com/We-Gold/hugo-digital-garden-theme
