--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,31 +1,34 @@
-name: Build and deploy
+name: Github Pages Astro CI
 
 on:
     push:
-        branches:
-            - master
-    pull_request:
+        branches: [master]
+    workflow_dispatch:
 
 jobs:
     deploy:
         runs-on: ubuntu-20.04
+
+        permissions:
+            contents: write
+
         steps:
-            - uses: actions/checkout@v2
+            - name: Check out your repository using git
+              uses: actions/checkout@v2
+
+            - name: Use Node.js 16
+              uses: actions/setup-node@v2
               with:
-                  submodules: true
-                  fetch-depth: 0
+                  node-version: 16
 
-            - name: Setup Hugo
-              uses: peaceiris/actions-hugo@v2
-              with:
-                  hugo-version: "latest"
-                  # extended: true
+            - name: Install dependencies
+              run: npm ci
 
-            - name: Build
-              run: hugo --minify
+            - name: Build Astro
+              run: npm run build
 
-            - name: Deploy
+            - name: Deploy to GitHub Pages
               uses: peaceiris/actions-gh-pages@v3
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: ./public
+                  publish_dir: ./dist
