--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "wegold.me",
+	"name": "weavergoldman.com",
 	"author": "Weaver Goldman <we.goldm@gmail.com>",
 	"description": "My personal website, using astro.",
 	"type": "module",
@@ -19,13 +19,12 @@
 		"@astrojs/sitemap": "^1.3.3",
 		"@astrojs/tailwind": "^3.1.3",
 		"astro": "^2.6.1",
+		"astro-relative-links": "0.3.4",
 		"daisyui": "^3.0.3",
 		"dayjs": "^1.11.8",
-		"sharp": "^0.32.1",
-		"astro-relative-links": "0.3.4"
+		"sharp": "^0.32.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9"
 	}
 }
-
